<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_custom_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_popup"
    android:padding="2dp"
    xmlns:mask="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/ib_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/close"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        tools:ignore="ContentDescription" />


    <EditText
        android:id="@+id/edtKidName"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/ib_close"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:hint="@string/enter_kid_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <EditText
        android:id="@+id/edtKidMobile"
        android:layout_below="@+id/edtKidName"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:maxLength="10"
        android:hint="@string/enter_kid_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtKidDOB"
        android:layout_below="@+id/edtKidMobile"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:inputType="numberDecimal"
        android:typeface="monospace"
        mask:mask="##/##/####"
        android:singleLine="true"
        android:drawableRight="@drawable/bday_calendar"
        android:hint="@string/enter_kid_dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingPrefix" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/edtKidDOB"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/spnGender"
        android:theme="@style/mySpinnerStyle"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:entries="@array/Gender"/>

    <TextView
        android:id="@+id/txtGender"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSave"
        android:layout_below="@+id/spnGender"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>